--- a/Project/CSS/NavBar.css
+++ b/Project/CSS/NavBar.css
@@ -8,20 +8,20 @@
     text-decoration: none;
     list-style: none;
     font-family: poppins;
+    scroll-behavior: smooth;
 }
 
 /* NavBar including the Background */
 /* Background */
 .darker{
-    background: rgb(6,20,27);
-    background: linear-gradient(180deg, rgba(6, 20, 27, 0.479) 100%, rgba(37, 55, 69, 0.379) 100%);
+    background: rgb(17,17,17);
+    background: linear-gradient(0deg, rgba(17,17,17,1) 0%, rgba(17,17,17,0.6979166666666667) 10%, rgba(29,31,33,0.7287289915966386) 90%, rgba(17,17,17,1) 100%);
     text-align: center;
     height: 107.6vh;
 }
 .Nav_Background{
     position: relative;
     bottom: 83px;
-    width: 100%;
     z-index: -9;
 }
 /* NavBar */
@@ -83,37 +83,81 @@
     font-size: 1.2rem;
 }
 .NavContent a{
-    color: #e5e7e9;
+
+    /* the linear gradient is treated as an image by the browser. */
+
+     background-image: linear-gradient(
+        to right,
+        #54b3d6,
+        #54b3d6 50%,
+        #e5e7e9 50%
+      );
+
+      /*  200% width and 100% height */
+
+      background-size: 200% 100%;
+      background-position: -100%;
+      display: inline-block;
+      padding: 5px;
+      position: relative;
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      transition: all 0.3s ease-in-out;
+}
+.NavContent a::before {
+    content: '';
+    background: #54b3d6;
+    display: block;
+    position: absolute;
+    bottom: -3px;
+    left: 0;
+    width: 0;
+    height: 3px;
+    transition: all 0.3s ease-in-out;
+}
+  
+.NavContent a:hover {
+   background-position: 0;
+}
+  
+.NavContent a:hover::before {
+    width:100%;
 }
 /* Headings */
 .header{
     font-size: 6rem;
-    color: #e5e7e9;
-    position: absolute;
-    top: 40%;
-    left: 25%;
-    transform: translate(-50%, -50%);
+    color: #E5E5E5;
+    animation: slider 1s;
 }
-#header0{
+.headings_div{
+    width: fit-content;
+    text-align: center;
     position: absolute;
-    left: 22%;
+    top: 30%;
+    left: 6%;
+}
+@keyframes slider {
+    from {
+        transform: translateX(-120%);
+    }
+}
+
+#header0{
+    text-align: start;
 }
 #header1{
-    position: absolute;
-    top: 53%;
-    left: 25%;
+    animation: slider 1.2s;
 }
 #header2{
-    position: absolute;
-    top: 66%;
-    left: 13.9%;
+    text-align: start;
+    animation: slider 1.4s
 }
 /* Button */
 .btn_div{
     width: fit-content;
     position: absolute;
     top: 690px;
-    left: 1550px;
+    left: 1500px;
 }
 .btn{
     border-radius: 100px;
@@ -129,7 +173,7 @@
 .btn:hover{
     width: 240%;
     cursor: pointer;
-    color: #11212D;
+    color: #14213D;
     background-color: #e5e7e9;
     transition: 0.6s;
 }
