--- a/Project/CSS/FourthSec.css
+++ b/Project/CSS/FourthSec.css
@@ -2,38 +2,52 @@
 #hr1{
     margin-top: 90px;
 }
-.con123{
+.imgBigCon{
     display: flex;
     justify-content: center;
-    margin-top: 100px;
+    margin-top: 150px;
 }
-.roshnImgCon{
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.imgCon{
     position: relative;
-    background-image: url("/IMAGES/Roshn1.jpg");
-    background-repeat: no-repeat;
-    width: 1200px;
-    height: 530px;
-    border-radius: 50px;
-}
-.Header_con1{
-    position: absolute;
-    font-size: 2.5rem;
-    color: #E5E5E5;
-    background-color: rgba(0, 0, 0, 0.6);
-    width: 100%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
+    width: 90%;
     align-items: center;
-    border-radius: 50px;
+    border-radius: 20px;
+}
+.imgCon img{
+    width: 100%;
+    border-radius: 30px;
+}
+.HeaderImg , .PImg{
+    position: absolute;
+    top: 70px;
+    color: #E5E5E5;
+    text-align: center;
+    width: 100%;
+}
+.backgroundimg{
+    background-color: rgba(0, 0, 0, 0.5);
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+.HeaderImg{
+    font-size: 2.5rem;
+}
+.PImg{
+    font-size: 2rem;
+    margin-top: 200px;
+}
+.PImg p{
+    padding: 60px;
+}
+.backgroundimg{
     transition: opacity 0.6s;
 }
-/* Image Effect */
-.Header_con1:hover{
-    opacity: 0;
+.backgroundimg:hover{
+    opacity: 1;
     transition: 0.6s;
     cursor: pointer;
-} 
+}
