--- a/Project/CSS/Cards.css
+++ b/Project/CSS/Cards.css
@@ -134,3 +134,61 @@
     border: 2px solid #14213D;
     transition: 0.6s;
 }
+/* Image */
+#hr1{
+    margin-top: 90px;
+}
+.imgBigCon{
+    display: flex;
+    justify-content: center;
+    margin-top: 150px;
+}
+.imgCon{
+    position: relative;
+    width: 90%;
+    align-items: center;
+    border-radius: 20px;
+}
+.imgCon img{
+    width: 100%;
+    border-radius: 30px;
+}
+.HeaderImg , .PImg{
+    position: absolute;
+    top: 70px;
+    color: #E5E5E5;
+    text-align: center;
+    width: 100%;
+}
+.backgroundimg{
+    background-color: rgba(0, 0, 0, 0.7);
+    opacity: 0;
+    position: absolute;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
+}
+.HeaderImg{
+    font-size: 2.5rem;
+}
+#hr2{
+    margin-top: 25px;
+}
+.PImg{
+    font-size: 2rem;
+    margin-top: 130px;
+}
+.PImg p{
+    padding: 100px;
+}
+.backgroundimg{
+    transition: opacity 0.6s;
+    border-radius: 30px;
+    margin-bottom: 6px;
+}
+.backgroundimg:hover{
+    opacity: 1;
+    transition: 0.6s;
+    cursor: pointer;
+}
