--- a/Project/CSS/NavBar.css
+++ b/Project/CSS/NavBar.css
@@ -10,7 +10,9 @@
     font-family: poppins;
     scroll-behavior: smooth;
 }
-
+body{
+    overflow-x: hidden;
+}
 /* NavBar including the Background */
 /* Background */
 .darker{
@@ -51,7 +53,7 @@
     display: flex;
     position: relative;
     top: 20px;
-    right: 40px;
+    right: 0px;
     width: 62%;
 }
 .searchbar{
@@ -67,7 +69,7 @@
 }
 /* Search Bar Effects */
 .searchbar:focus, .searchbar:hover{
-    width: 90%;
+    width: 87%;
     transition: .6s;
 }
 /* NavBar Content (SearchBar-Logo-Links) */
@@ -86,6 +88,20 @@
     justify-content: space-around;
     gap: 15%;
     font-size: 1.4rem;
+}
+.LangChange{
+    position: relative;
+    left: 25px;
+    top: 11px;
+    filter: brightness(0) invert(.79);
+    transition: 0.3s;
+    height: fit-content;
+}
+.LangChange:hover{
+    filter: brightness(0) invert(.4);
+}
+.LangChange img{
+    width: 60px;
 }
 /* Nav Links Effects */
 .NavContent a{
