--- a/Project/CSS/Packages.css
+++ b/Project/CSS/Packages.css
@@ -1,13 +1,142 @@
-.darker{
-    background: rgb(17,17,17);
-    background: linear-gradient(0deg, rgba(17,17,17,1) 0%, rgba(17,17,17,0.6979166666666667) 10%, rgba(29,31,33,0.7287289915966386) 90%, rgba(17,17,17,1) 100%);
-    text-align: center;
-    height: 129vh;
+*{
+    transition: 0.3s;
 }
-.headings_div{
-    width: fit-content;
+
+
+.darker{
+    background: rgb(35,35,35);
+    background: linear-gradient(180deg, rgba(35,35,35,0.4234068627450981) 0%, rgba(17,17,17,0.5662640056022409) 100%);
     text-align: center;
+    height: 129.6vh;
+}
+.cards_div{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+    margin-top: 20px;
+    overflow-x: auto;
+    overflow-y: hidden;
+
+}
+/* Style For The Cards */
+.cards{
+    width: 400px;
+    border-radius: 25px;
+    transition: height 0.6s;
+    background-color: #464646;
+    position: relative;
+    transition: transform 0.6s, opacity 0.6s;
+    margin-top: 80px;
+    margin-bottom: 80px;
+}
+.header_con{
+    border-bottom: 2px solid #e5e7e9;
+    width: 70%;
+}
+.headerBorder{
+    display: flex;
+    justify-content: center;
+}
+.cards h1 {
+    font-size: 1.5rem;
+}
+.header_con{
+    font-size: 2.5rem;
+}
+.cards_background{
+    width: 100%;
+    border-radius: 25px;
+    height: 550px;
+    background-image: url("/IMAGES/events120.webp");
+    background-repeat: no-repeat;
+    background-size: cover;
+    position: relative;
+}
+.price{
+    font-size: 2rem;
+    text-align: end;
+    color: #00406C;
+    font-weight: bolder;
+}
+/* Applying The Images */
+#Card2{
+    background-image: url("/IMAGES/events120\(1\).webp");
+    background-position: 50%;
+}
+#Card3{
+    background-image: url("/IMAGES/events200.webp");
+    background-position: 10%;
+    background-size: contain;
+    background-color: #002E4E;
+}
+#Card4{
+    background-image: url("/IMAGES/events195.webp");
+    filter: brightness(0.9);
+}
+#Cards5{
+    background-image: url("/IMAGES/Iftar.webp");
+    background-position: 90%;
+}
+#Card6{
+    background-image: url("/IMAGES/Suhoor.webp");
+    background-position: 90%;
+}
+#Card7{
+    background-image: url("/IMAGES/Children1.webp");
+    background-position: 100%;
+}
+#Card8{
+    background-image: url("/IMAGES/Children2.webp");
+    background-position: 50%;
+    filter: brightness(.95);
+}
+#Card9{
+    background-image: url("/IMAGES/Children3.webp");
+    background-position: 100%;
+}
+.cards_div{
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    align-items: center;
+    gap: 10px;
+    margin-top: 20px;
+    overflow-x: auto;
+    overflow-y: hidden;
+}
+.opacity{
+    border-radius: 25px;
     position: absolute;
-    top: 30%;
-    left: 4%;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.8);
+}
+.btn_div1{
+    text-align: end;
+    margin-top: 160px;
+    width: 100%;
+    transition: opacity 0.6s;
+}
+.btn_div1 button{
+    border-radius: 100px;
+    font-size: 1.01rem;
+    padding: 10px;
+    background-color: #e5e5e500;
+    width: 60%;
+    transition: width 0.6s;
+    color: #e5e7e9;
+    border: 2px solid #e5e7e9;
+}
+.btn_div1 button:hover{
+    width: 80%;
+    cursor: pointer;
+    background-color: #e5e7e9;
+    color: #14213D;
+    border: 2px solid #14213D;
+    transition: 0.6s;
+    border: none;
 }
