--- a/Project/CSS/Cards.css
+++ b/Project/CSS/Cards.css
@@ -1,16 +1,18 @@
 /* Third Section */
 /* The divder Border */
-.hr_con{
+.hr_con {
     height: 20px;
     display: flex;
     justify-content: center;
 }
-.hr{
+
+.hr {
     border-bottom: white 2px solid;
     width: 85%;
 }
+
 /* Heading */
-.header_con{
+.header_con {
     display: flex;
     justify-content: center;
     margin-top: 50px;
@@ -19,9 +21,10 @@
     font-size: 1.7rem;
     color: #E5E5E5;
 }
+
 /* Cards */
 /* Cards Container */
-.cards_div{
+.cards_div {
     display: flex;
     flex-direction: row;
     justify-content: center;
@@ -29,8 +32,9 @@
     gap: 50px;
     margin-top: 20px;
 }
+
 /* Style For The Cards */
-.cards{
+.cards {
     width: 400px;
     border-radius: 25px;
     transition: height 0.6s;
@@ -39,8 +43,9 @@
     transition: transform 0.6s;
     transition: opacity 0.6s;
 }
+
 /* Cards Background Image */
-.cards_background{
+.cards_background {
     width: 100%;
     border-radius: 25px;
     height: 550px;
@@ -49,8 +54,9 @@
     background-size: cover;
     position: relative;
 }
+
 /* The effect on the card Image */
-.opacity{
+.opacity {
     border-radius: 25px;
     position: absolute;
     top: 0;
@@ -60,16 +66,19 @@
     background-color: rgba(0, 0, 0, 0.5);
     width: 0%;
 }
-.cards_background:hover .opacity{
+
+.cards_background:hover .opacity {
     width: 100%;
     transition: 0.6s;
 }
-.cards_background:hover .contentView{
+
+.cards_background:hover .contentView {
     opacity: 1;
     transition: 0.6s;
 }
+
 /* Cards Content */
-.contentView{
+.contentView {
     position: relative;
     z-index: 1;
     opacity: 0;
@@ -77,46 +86,55 @@
     padding: 100px 20px 40px 40px;
     color: #E5E5E5;
 }
-.borderBtm{
+
+.borderBtm {
     margin-left: 70px;
     margin-top: 30px;
     position: relative;
     right: 70px;
     width: 90%;
 }
-.borderBtm div{
+
+.borderBtm div {
     border: 1px solid white;
     width: 100%;
 }
+
 /* Cards Header */
-.opacityHeader{
+.opacityHeader {
     font-size: 1.3rem;
     transition: opacity 0.6s;
 }
+
 /* Cards Paragraph */
-.opacity_par{
+.opacity_par {
     transition: opacity 0.6s;
     margin-top: 40px;
     font-size: 1.3rem;
 }
+
 /* Applying The Images */
-#Card2{
+#Card2 {
     background-image: url("/IMAGES/TheGroves.jpg");
 }
-#Card3{
+
+#Card3 {
     background-image: url("/IMAGES/arenna.jpg");
 }
-#Card4{
+
+#Card4 {
     background-image: url("/IMAGES/tranzzz.jpg");
 }
+
 /* Cards Button */
-.btn_div1{
+.btn_div1 {
     text-align: end;
     margin-top: 160px;
     width: 100%;
     transition: opacity 0.6s;
 }
-.btn_div1 button{
+
+.btn_div1 button {
     border-radius: 100px;
     font-size: 1.01rem;
     padding: 10px;
@@ -126,7 +144,8 @@
     color: #e5e7e9;
     border: 2px solid #e5e7e9;
 }
-.btn_div1 button:hover{
+
+.btn_div1 button:hover {
     width: 60%;
     cursor: pointer;
     background-color: #e5e7e9;
@@ -134,33 +153,40 @@
     border: 2px solid #14213D;
     transition: 0.6s;
 }
+
 /* Image */
-#hr1{
+#hr1 {
     margin-top: 90px;
 }
-.imgBigCon{
+
+.imgBigCon {
     display: flex;
     justify-content: center;
     margin-top: 150px;
 }
-.imgCon{
+
+.imgCon {
     position: relative;
     width: 90%;
     align-items: center;
     border-radius: 20px;
 }
-.imgCon img{
+
+.imgCon img {
     width: 100%;
     border-radius: 30px;
 }
-.HeaderImg , .PImg{
+
+.HeaderImg,
+.PImg {
     position: absolute;
     top: 70px;
     color: #E5E5E5;
     text-align: center;
     width: 100%;
 }
-.backgroundimg{
+
+.backgroundimg {
     background-color: rgba(0, 0, 0, 0.7);
     opacity: 0;
     position: absolute;
@@ -169,26 +195,31 @@
     left: 0;
     bottom: 0;
 }
-.HeaderImg{
+
+.HeaderImg {
     font-size: 2.5rem;
 }
-#hr2{
+
+#hr2 {
     margin-top: 25px;
 }
-.PImg{
+
+.PImg {
     font-size: 2rem;
     margin-top: 130px;
 }
-.PImg p{
+
+.PImg p {
     padding: 100px;
 }
-.backgroundimg{
+
+.backgroundimg {
     transition: opacity 0.6s;
     border-radius: 30px;
     margin-bottom: 6px;
 }
-.backgroundimg:hover{
+
+.backgroundimg:hover {
     opacity: 1;
     transition: 0.6s;
-    cursor: pointer;
 }
