--- a/Project/CSS/Packages.css
+++ b/Project/CSS/Packages.css
@@ -1,24 +1,22 @@
-
-
-
+/* Darken background on the photo */
 .darker{
     background: rgb(35,35,35);
     background: linear-gradient(180deg, rgba(35,35,35,0.4234068627450981) 0%, rgba(17,17,17,0.5662640056022409) 100%);
     text-align: center;
     height: 129.6vh;
 }
+/* Cards Container */
 .cards_div{
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: space-around;
     align-items: center;
-    gap: 50px;
+    gap: 10px;
     margin-top: 20px;
     overflow-x: auto;
     overflow-y: hidden;
-
 }
-/* Style For The Cards */
+/* Cards Style */
 .cards{
     width: 400px;
     border-radius: 25px;
@@ -29,6 +27,7 @@
     margin-top: 80px;
     margin-bottom: 80px;
 }
+/* Cards header */
 .header_con{
     border-bottom: 2px solid #e5e7e9;
     width: 70%;
@@ -43,6 +42,7 @@
 .header_con{
     font-size: 2.5rem;
 }
+/* Cards Background Image */
 .cards_background{
     width: 100%;
     border-radius: 25px;
@@ -52,13 +52,14 @@
     background-size: cover;
     position: relative;
 }
+/* Price */
 .price{
     font-size: 2rem;
     text-align: end;
     color: #00406C;
     font-weight: bolder;
 }
-/* Applying The Images */
+/* Changing Image for each Card */
 #Card2{
     background-image: url("/IMAGES/events120\(1\).webp");
     background-position: 50%;
@@ -94,16 +95,7 @@
     background-image: url("/IMAGES/Children3.webp");
     background-position: 100%;
 }
-.cards_div{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-around;
-    align-items: center;
-    gap: 10px;
-    margin-top: 20px;
-    overflow-x: auto;
-    overflow-y: hidden;
-}
+/* Darken Background effect on cards */
 .opacity{
     border-radius: 25px;
     position: absolute;
@@ -113,6 +105,7 @@
     right: 0;
     background-color: rgba(0, 0, 0, 0.8);
 }
+/* Cards Button */
 .btn_div1{
     text-align: end;
     margin-top: 160px;
@@ -129,6 +122,7 @@
     color: #e5e7e9;
     border: 2px solid #e5e7e9;
 }
+/* Cards Button Hover */
 .btn_div1 button:hover{
     width: 80%;
     cursor: pointer;
