--- a/Project/CSS/NavBar.css
+++ b/Project/CSS/NavBar.css
@@ -1,5 +1,5 @@
 /* Import a font-Family */
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 /* Decreasing the border */
 *{
     margin: 0%;
@@ -7,7 +7,6 @@
     box-sizing: border-box;
     text-decoration: none;
     list-style: none;
-    font-family: poppins;
     scroll-behavior: smooth;
 }
 body{
@@ -15,6 +14,8 @@ body{
     background-color: #111111;
     height: 300vh;
     transition: 0.3s;
+    font-family: 'Poppins', sans-serif;
+
 }
 /* NavBar including the Background */
 /* Background */
